--- a/community-support.html
+++ b/community-support.html
@@ -8,12 +8,12 @@
     <script>
         function openWhatsApp() {
             // Open WhatsApp with the predefined number
-            window.location.href = "https://wa.me/9481276801";
+            window.location.href = "https://wa.me/1234567891";
         }
 
         function openGmail() {
             // Open Gmail with the predefined email
-            window.location.href = "mailto:sumaiyansarwad06@gmail.com";
+            window.location.href = "mailto:test@gmail.com";
         }
     </script>
 </head>
